--- a/styles.css
+++ b/styles.css
@@ -30,8 +30,21 @@
 }
 
 .main-image {
-    width: 20%;
+    width: 100%;
     margin-left: 15px;
+    margin-bottom: 15px;
     float: right;
     border: 10px solid var(--color-yellow);
+}
+
+@media screen and (min-width: 480px) {
+    .main-image {
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 870px) {
+    .main-image {
+        width: 20%;
+    }
 }
